Documentation left-nav overlap fix

--- a/less/app.less
+++ b/less/app.less
@@ -312,7 +312,7 @@ pre{
 	padding: 0;
     margin-top: 59px;
 	.left-nav {
-		height: 100%;
+		min-height: 100vh;
 		.nav-wrap {
 			position: fixed;
 			left: 0;
